src/components/Header/Header.css
/**
 * React Starter Kit (https://www.reactstarterkit.com/)
 *
 * Copyright © 2014-present Kriasoft, LLC. All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE.txt file in the root directory of this source tree.
 */

@import '../variables.css';

:root {
  --brand-color: #61dafb;
}

.brand {
  /*padding: 5px;*/
  /*margin: -2px 0 0 -8px;*/
  font-size: 1.2em;
}

.inline {
  display: inline;
}

.nowrap {
  white-space: nowrap;
}

@media (min-width: 992px) and (max-width: 4000px) {
  .root {
    background: #263E49;
    color: #fff;
  }

  .container {
    margin: -1px auto;
    max-width: var(--max-header-width);
    /*min-width: var(--min-web-content-width);*/
  }

  .navRightWrap {
    width: 10%;
    float: right;
    padding: 0 10px 0 0;
  }

  .navControl {
    width: 40%;
    padding-right: 0px;
  }
}

/**************** Style Mobile ****************/
@media (max-width: 992px) {
  .root {
    padding-bottom: 12px;
    background: #e7e7e7;
    color: #fff;
  }

  .container {
    margin: 0px 15px;
    padding: 1px 0px;
    background: #263E49;
  }

  .navControl {
    background-color: #fff;
  }

  .navRightWrap {
    width: 32%;
    float: right;
    padding: 0 10px 0 0;
  }
}

